k8s/00-namespace-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dry-fruits-platform
  labels:
    name: dry-fruits-platform
